# Megaman

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client.cpp  client_conexion_servidor.cpp  client_conexion_servidor.h  cliente.cpp  cmake_install.cmake  common_socket.cpp  installSDL2.sh  server.cpp  server_accept.h  server_conexion_cliente.cpp  server_conexion_cliente.h  server_procesador_servidor.cpp  server_procesador_servidor.h  servidor.cpp
AnimationConfig/: bombman.txt  bumby.txt  fireman.txt  j_sniper.txt  magnetman.txt  megaman.txt  megaman.txt~  met.txt  ringman.txt  sniper.txt  sparkman.txt
Cliente/: Makefile  cliente  cmake_install.cmake
Comun/: Makefile  cmake_install.cmake
Mapas/: mapa1.txt  mapa1.txt~  mapa1_boss.txt~  mapa2.txt  mapa2.txt~  mapa2_predefinido.txt~  mapa3.txt  mapa3.txt~  mapa4.txt  mapa4.txt~  mapa4_predefinido.txt~  mapa5.txt  mapa5.txt~  mapa6.txt  mapa_boss1.txt  mapa_boss1.txt~  mapa_boss2.txt  mapa_boss2.txt~  mapa_boss3.txt  mapa_boss4.txt  mapa_boss5.txt  mapa_boss_template.txt~  mapaboss_template.txt~
Modelos-UML-etc/: .~lock.ids_megaman.xls#  accion_dos.cpp  accion_uno.cpp  ids_megaman.xls  ubicable.h  ventana.cpp
Servidor/: Makefile  cmake_install.cmake  servidor
Tests/: Makefile  cmake_install.cmake  tests
src/: CMakeLists.txt  CMakeLists.txt~  hilo.cpp  lock.h  server.cpp
src/Cliente/: CMakeLists.txt  CMakeLists.txt~  Renderer.cpp  Renderer.cpp~  Renderer.h  Sprite.cpp  Sprite.cpp~  Sprite.h  Sprite.h~  accion_dos.cpp  accion_dos.h  accion_uno.cpp  accion_uno.h  background_sprite.cpp  background_sprite.h  backround_sprite.cpp  backround_sprite.h  bar_sprite.cpp  bar_sprite.h  block_sprite.cpp  block_sprite.h  boss_icon_sprite.cpp  boss_icon_sprite.h  bullet_sprite.cpp  bullet_sprite.h  character_sprite.cpp  character_sprite.h  client.cpp  client.cpp~  event.cpp  event.h  game.cpp  game.h  gameState.h  gameStateLobby.cpp  gameStateLobby.h  gameStateStart.cpp  gameStateStart.cpp~  gameStateStart.h  lobbyreceiver.cpp  (+29 more)
src/Comun/: CMakeLists.txt  lock.cpp  mutex.cpp  socket.cpp  socket.h
src/Editor/: CMakeLists.txt  CMakeLists.txt~  camara.txt  cargador_mapa.cpp  cargador_mapa.h  chamber.txt  editor.cpp  editor.h  editor_main.cpp  escalera_factory.cpp  escalera_factory.h  escritor_mapa.cpp  escritor_mapa.h  gameStateEditor.cpp  gameStateEditor.h  met_factory.cpp  met_factory.h  posicion_invalida.h  ubicable_factory.h
src/Servidor/: .goutputstream-G6UPIY  .goutputstream-IN3YIY  .goutputstream-MJ6XIY  CMakeLists.txt  CMakeLists.txt~  actualizable.cpp  actualizable.h  arma.h  arma_megaman.cpp  arma_megaman.h  atacable.h  bala.cpp  bala.h  bala_met.cpp  bala_met.h  bala_normal.cpp  bala_normal.h  bloque.cpp  bloque.h  celda.cpp  celda.h  celda_aire.cpp  celda_aire.h  celda_tierra.cpp  celda_tierra.h  conexion_cliente.cpp  conexion_cliente.h  coordenada.cpp  coordenada.h  creador_atacar.cpp  creador_atacar.h  creador_cambiar_arma.cpp  creador_cambiar_arma.h  creador_evento.h  creador_mover.cpp  creador_mover.h  defendible.h  elemento.h  entrada_estandar.cpp  entrada_estandar.h  (+63 more)
src/Servidor/Conexion/: CMakeLists.txt  CMakeLists.txt~  almacenador_clientes.cpp  almacenador_clientes.h  conexion_cliente.cpp  conexion_cliente.h  creador_elegir_boss.cpp  creador_elegir_boss.h  creador_mover.cpp  creador_mover.h  creador_parar.h  creador_start.cpp  creador_start.h  entrada_estandar.h  evento_atacar.cpp  evento_atacar.h  evento_cambiar_arma.cpp  evento_cambiar_arma.h  evento_cliente_conectado.cpp  evento_cliente_desconectado.cpp  evento_elegir_boss.cpp  evento_elegir_boss.h  evento_lobby.h  evento_mover.cpp  evento_mover.h  evento_parar.cpp  evento_start.cpp  evento_start.h  main_server.cpp  manejador_lobby.cpp  manejador_lobby.h  observador_juego.h  procesador_eventos.cpp  procesador_eventos.h  procesador_lobby.h  receiver_cliente.cpp  receiver_cliente.cpp~  receiver_cliente.h  servidor.cpp  servidor.h
src/Servidor/Conexion/Arquitectura/: CMakeLists.txt  CMakeLists.txt~  almacenador_clientes.cpp  almacenador_clientes.h  conexion_cliente.cpp  conexion_cliente.h  entrada_estandar.cpp  entrada_estandar.h  log.cpp  log.h  main_server.cpp  receiver_cliente.cpp  receiver_cliente.h  servidor.cpp  servidor.h
src/Servidor/Conexion/Lobby/: CMakeLists.txt  creador_elegir_boss.h  creador_evento_lobby.h  creador_start.h  evento_cliente_conectado.cpp  evento_cliente_conectado.h  evento_cliente_desconectado.cpp  evento_cliente_desconectado.h  evento_elegir_boss.cpp  evento_elegir_boss.h  evento_lobby.h  evento_null_lobby.cpp  evento_null_lobby.h  evento_start.cpp  evento_start.h  manejador_lobby.cpp  manejador_lobby.h  procesador_lobby.cpp  procesador_lobby.h
src/Servidor/Conexion/Partida/: creador_parar.cpp  estado.cpp  estado.h  evento.h  evento_atacar.cpp  evento_atacar.h  evento_cambiar_arma.cpp  evento_cambiar_arma.h  evento_mover.cpp  evento_mover.h  evento_null_partida.cpp  evento_null_partida.h  evento_parar.cpp  evento_parar.h  manejador_eventos.cpp  manejador_eventos.h  observador_juego.h  procesador_eventos.cpp
src/Servidor/Modelo/: CMakeLists.txt  CMakeLists.txt~  actualizable.h  arma.h  arma_bombman.cpp  arma_bombman.h  arma_boss.cpp  arma_boss.h  arma_factory.cpp  arma_factory.h  arma_fireman.cpp  arma_fireman.h  arma_magnetman.cpp  arma_magnetman.h  arma_megaman.cpp  arma_megaman.h  arma_met.cpp  arma_met.h  arma_minion.cpp  arma_minion.h  arma_ringman.cpp  arma_ringman.h  arma_sparkman.cpp  arma_sparkman.h  bala.cpp  bala.h  bala_bombman.cpp  bala_bombman.h  bala_especial.cpp  bala_especial.h  bala_fireman.cpp  bala_fireman.h  bala_magnetman.cpp  bala_magnetman.h  bala_met.cpp  bala_met.h  bala_minion.cpp  bala_minion.h  bala_normal.cpp  bala_normal.h  (+134 more)
src/Tests/: CMakeLists.txt  CMakeLists.txt~  test_mover.cpp  tests.cpp  tests_coordenada.h  tests_mapa.h  tests_mover.h  tests_observadores.h  tests_strategy_mover.h
